@@ -19,3 +19,4 @@ pageSegMode=1
 maxFileSizeToOcr=2147483647
 minFileSizeToOcr=0
 timeout=120
+preserveInterwordSpacing=false
